# IPL_2

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 94626e985b23_fix_auto_increment_for_user_id.py  975c9691f43e_add_user_id_column_to_parking_sessions_.py
plate_operation/: discavery_plate_2.py  finish_car_plate_code_building.py  insctruction.txt  open_photo_1.py  test.py
reports_uploads/: all_users_for_admin_2025-03-31_20-03-12.csv  all_users_for_admin_2025-04-02_13-25-03.csv  all_users_for_admin_2025-04-03_14-15-14.csv  all_users_for_admin_2025-04-03_14-26-14.csv  all_users_for_admin_2025-04-03_14-33-14.csv  all_users_for_admin_2025-04-04_19-37-06.csv  all_users_for_admin_2025-04-05_13-49-18.csv  test_nazar_2025-04-02_13-27-04.csv  users_for_admin_2025-03-31_20-03-45.csv  users_for_admin_2025-04-03_14-15-19.csv  users_for_admin_2025-04-03_14-26-19.csv  users_for_admin_2025-04-04_19-37-08.csv
scripts/: home.js
src/db/: models.py
src/schemas/: schemas_user.py
static/: cover.css  styles.css  success.css
templates/: home.html  index.html  login.html  payment.html  search.html  signup.html  upload-entry-photo.html  upload-exit-photo.html
