[tool.poetry]
name = "pds-1"
version = "0.1.0"
description = ""
authors = ["Nazar_Dmytruk <dmitryknnazar190@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.7.2"}
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
passlib = "1.7.4"
python-jose = "^3.3.0"
pillow = "^10.3.0"
bcrypt = {version = "^4.1.3", source = "pypi"}
psycopg2-binary = "^2.9.9"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pytesseract = "^0.3.10"
tesseract-ocr = "*"
